correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -9,6 +9,7 @@
 }
 
 .timetable tr{
+	border-collapse:collapse;
 	font-size: 9px;
 	color: #003333;
 	font-weight:bold;
@@ -75,11 +76,7 @@
 }
 
 .period-hours {
-	font-size: 10px; /*changed from 11px to 10px
-	color: #333333;
-	background-color: #999999;
-	text-align: center;
-	/*height: 20px;*/
+	font-size: 10px;
 	vertical-align: middle;
 	border-style:solid;
 	border-width: 1px;
